--- a/ZipWeather/templates/Index.html
+++ b/ZipWeather/templates/Index.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <!DOCTYPE html>
 <head>
     <title>ZipWeather.com</title>
@@ -45,13 +47,15 @@
       <container>
       <div class="jumbotron">
         <h1 class="display-4">Default City</h1>
-        <p class="lead">Default Weather Conditions</p>
+        <p class="lead"></p>
         <hr class="my-4">
         <p>Default Details</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
       </div>
     </container>
+    {{ api }}
     <!--End of Jumbotron-->
 </body>
 
 </html>
+{% endblock %}
