ZipWeather V1.0.1 is Complete. Bit of error handling Left

--- a/ZipWeather/templates/Index.html
+++ b/ZipWeather/templates/Index.html
@@ -14,17 +14,21 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--Internal Style Sheet for reformatting-->
     <style>
+      .good{background-color: greenyellow;}
+      .moderate{ background-color: yellow }
+      .usg{ background-color: orange; }
+      .unhealthy{ background-color: orangered; }
+      .veryunhealthy{ background-color: maroon;}
+      .hazardous{ background-color: brown; }
       .jumbotron{
-        padding-top: 4px;
-      margin-top: 25px;
-      margin-left: 10px;
-      margin-right: 10px;    
+       margin: 15px;
       }
+      
      body{
-      background-image: url(Index_Wallpaper.jpeg);
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      background-size: cover;
+        background-image: url("C:\Django_Weather\weather\ZipWeather\templates\Index_Wallpaper.jpg");
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
       }
       
     </style>
@@ -37,23 +41,41 @@
     <nav class="navbar navbar-dark bg-dark">
         
         <a class="navbar-brand">ZipWeather.com</a>
-        <form class="form-inline">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Enter ZIP Code">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        
+        <form class="form-inline" method="POST" name="zip" action="{% url 'Home' %}">
+          {% csrf_token %}
+          <input class="form-control mr-sm-2" type="search" placeholder="Enter ZIP Code" aria-label="Enter ZIP Code" name='zip' >
+          <button class="btn btn-outline-success my-2 my-sm-0" type="Lookup">Lookup</button>
         </form>
       </nav></container>
       <!--End of Navbar-->
       <!--Start of Jumbotron-->
+      {% if api %}
+        {% if api == "Error 404...not found!"%}
+        <container>
+          <div class="jumbotron good">
+            <h1 class="display-4">Please Try Again</h1>
+            <p class="lead">The ZIP Code you entered doesn't exist/is invalid.</p>
+            <hr class="my-4">
+            <p></p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          </div>
+        </container>
+        {% else %}     
       <container>
-      <div class="jumbotron">
-        <h1 class="display-4">Default City</h1>
-        <p class="lead"></p>
+
+      
+      <div class="jumbotron good">
+        <h1 class="display-4">{{ api.0.Category.Name }}</h1>
+        <p class="lead">Air Quality Index {{ api.0.AQI }} At <b>{{ api.0.ReportingArea }}</b></p>
         <hr class="my-4">
-        <p>Default Details</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <p>{{ description }}</p>
+        <!--<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>-->
       </div>
     </container>
-    {{ api }}
+    
+    {% endif %}
+    {% endif %}
     <!--End of Jumbotron-->
 </body>
 
