--- a/ZipWeather/templates/Index.html
+++ b/ZipWeather/templates/Index.html
@@ -36,6 +36,9 @@
         background-color: blueviolet;
         
       }
+      .jumbotron:hover{
+        box-shadow: 4px 4px 4px rgb(38, 126, 107);
+      }
       .temp{
         background-color: aquamarine;
       }
